include $(top_srcdir)/Makefile.am.common

include warped/eclmpl/Makefile.am.stub


lib_LTLIBRARIES = libwarped.la 

if HAVE_MPICH
libwarped_la_LIBADD = -lmpich -lmpl -lpthread 
else 
if HAVE_MPI
libwarped_la_LIBADD = -lmpi -lpthread 
else
libwarped_la_LIBADD = -lpthread
endif
endif

libwarped_la_LIBADD += $(top_builddir)/include/json/libjsoncpp.la

WARPED_H_FILES = \
	$(ECLMPL_H_FILES) \
	warped/AdaptiveOutputManager.h \
	warped/AdaptiveStateManagerBase.h \
	warped/AggressiveOutputManager.h \
	warped/Application.h \
	warped/CentralizedEventSetSchedulingManager.h \
	warped/ChebyFossilCollManager.h \
	warped/CirculateInitializationMessage.h \
	warped/CommunicatingEntity.h \
	warped/CommunicationManager.h \
	warped/CommunicationManagerFactory.h \
	warped/CommunicationManagerImplementationBase.h \
	warped/Configurable.h \
	warped/ConfigurationManager.h \
	warped/Configurer.h \
	warped/ConsoleIO.cpp \
	warped/ConsoleIO.h \
	warped/controlkit/Actuator.h \
	warped/controlkit/ActuatorImplementationBase.h \
	warped/controlkit/AggregateAsyncFilteredSensor.h \
	warped/controlkit/AggregateSyncSensor.h \
	warped/controlkit/AsyncFilteredSensor.h \
	warped/controlkit/AsyncSensor.h \
	warped/controlkit/AverageFilter.h \
	warped/controlkit/Filter.h \
	warped/controlkit/FIRFilter.h \
	warped/controlkit/IIRFilter.h \
	warped/controlkit/MedianFilter.h \
	warped/controlkit/Sensor.h \
	warped/controlkit/SensorImplementationBase.h \
	warped/controlkit/SyncSensor.h \
	warped/ControlManager.h \
	warped/CostAdaptiveStateManager.h \
	warped/DefaultCommunicationManager.h \
	warped/DefaultEvent.h \
	warped/DefaultObjectID.h \
	warped/DefaultPartitioner.h \
	warped/DefaultPhysicalCommunicationLayer.h \
	warped/DefaultSchedulingManager.h \
	warped/DefaultTimeWarpEventContainer.h \
	warped/DefaultTimeWarpEventContOneAntiMsg.h \
	warped/DefaultTimeWarpEventSet.h \
	warped/DeserializerManager.h \
	warped/DistributedDVFSManager.h \
	warped/DVFSManager.h \
	warped/DVFSManagerFactory.h \
	warped/DVFSManagerImplementationBase.h \
	warped/Event.h \
	warped/EventFunctors.h \
	warped/EventId.h \
	warped/EventMessage.h \
	warped/EventMessageBase.h \
	warped/EventSet.h \
	warped/EventSetFactory.h \
	warped/Factory.h \
	warped/FactoryImplementationBase.cpp \
	warped/FactoryImplementationBase.h \
	warped/FactoryManager.cpp \
	warped/FactoryManager.h \
	warped/FactorySymbolTable.cpp \
	warped/FactorySymbolTable.h \
	warped/FileData.h \
	warped/FileManager.h \
	warped/FileQueue.h \
	warped/FlatState.h \
	warped/GVTManager.h \
	warped/GVTManagerFactory.h \
	warped/GVTManagerImplementationBase.h \
	warped/GVTUpdateMessage.h \
	warped/InFileData.h \
	warped/InFileQueue.h \
	warped/InitializationMessage.h \
	warped/InputSetObject.h \
	warped/IntVTime.h \
	warped/KernelMessage.h \
	warped/LazyOutputManager.h \
	warped/LocalEventMessage.h \
	warped/LocalFossilCollectMessage.h \
	warped/LocalKernelMessage.h \
	warped/LocalNegativeEventMessage.h \
	warped/LockedQueue.h \
	warped/MatternGVTManager.h \
	warped/MatternGVTMessage.h \
	warped/MatternObjectRecord.h \
	warped/MessageManager.h \
	warped/MsgAggregatingCommunicationManager.h \
	warped/NegativeEvent.h \
	warped/NegativeEventMessage.h \
	warped/ObjectEventPair.h \
	warped/ObjectID.h \
	warped/ObjectStub.cpp \
	warped/ObjectStub.h \
	warped/OptFossilCollManager.h \
	warped/OptFossilCollManagerFactory.h \
	warped/OutputEvents.h \
	warped/OutputManager.h \
	warped/OutputManagerFactory.h \
	warped/OutputManagerImplementationBase.h \
	warped/Partitioner.h \
	warped/PartitionInfo.h \
	warped/PeriodicStateManager.h \
	warped/ReceiverQueueContainer.h \
	warped/RestoreCkptMessage.h \
	warped/RoundRobinPartitioner.h \
	warped/SchedulingData.h \
	warped/SchedulingManager.h \
	warped/SchedulingManagerFactory.h \
	warped/SenderQueueContainer.h \
	warped/SequentialConfigurationManager.h \
	warped/SequentialSimulationManager.h \
	warped/SequentialSimulationStream.h \
	warped/Serializable.cpp \
	warped/Serializable.h \
	warped/SerializedInstance.h \
	warped/SetObject.h \
	warped/SharedDVFSManager.h \
	warped/Simulation.h \
	warped/SimulationConfiguration.h \
	warped/SimulationManager.h \
	warped/SimulationManagerImplementationBase.h \
	warped/SimulationObject.h \
	warped/SimulationObjectProxy.h \
	warped/SimulationStream.h \
	warped/SingleLinkedList.h \
	warped/SingleTerminationManager.h \
	warped/SinkObject.h \
	warped/Socket.cpp \
	warped/Socket.h \
	warped/SourceObject.h \
	warped/Spinner.h \
	warped/SplayTree.h \
	warped/StackOfPtr.h \
	warped/StartMessage.h \
	warped/State.h \
	warped/StateManager.h \
	warped/StateManagerFactory.h \
	warped/StateManagerImplementationBase.h \
	warped/StateSetObject.h \
	warped/StopWatch.cpp \
	warped/StopWatch.h \
	warped/StragglerEvent.h \
	warped/TerminateToken.h \
	warped/TerminationManager.h \
	warped/ThreadedAggressiveOutputManager.h \
	warped/ThreadedChebyFossilCollManager.h \
	warped/ThreadedCostAdaptiveStateManager.h \
	warped/ThreadedDynamicOutputManager.h \
	warped/ThreadedLazyOutputManager.h \
	warped/ThreadedMatternGVTManager.h \
	warped/ThreadedOptFossilCollManager.h \
	warped/ThreadedOutputEvents.h \
	warped/ThreadedOutputManager.h \
	warped/ThreadedOutputManagerImplementationBase.h \
	warped/ThreadedPeriodicStateManager.h \
	warped/ThreadedStateManager.h \
	warped/ThreadedStateManagerImplementationBase.h \
	warped/ThreadedTimeWarpEventSet.h \
	warped/ThreadedTimeWarpLoadBalancer.h \
	warped/ThreadedTimeWarpMultiSet.h \
	warped/ThreadedTimeWarpMultiSetLTSF.h \
	warped/ThreadedTimeWarpMultiSetSchedulingManager.h \
	warped/ThreadedTimeWarpSimulationManager.h \
	warped/TimeWarpCentralizedEventSet.h \
	warped/TimeWarpCentralizedEventSetFactory.h \
	warped/TimeWarpConfigurationManager.h \
	warped/TimeWarpEventSet.h \
	warped/TimeWarpEventSetFactory.h \
	warped/TimeWarpMultiSet.h \
	warped/TimeWarpMultiSetOneAntiMsg.h \
	warped/TimeWarpMultiSetSchedulingManager.h \
	warped/TimeWarpSenderQueue.h \
	warped/TimeWarpSimulationManager.h \
	warped/TimeWarpSimulationManagerFactory.h \
	warped/TimeWarpSimulationStream.h \
	warped/TokenPassingTerminationManager.h \
	warped/Transceiver.h \
	warped/TreeElement.h \
	warped/Types.h \
	warped/UsefulWorkMessage.h \
	warped/version.h \
	warped/VTime.h \
	warped/warped.h \
	warped/WarpedDebug.h \
	warped/WarpedMain.h \
	warped/WorkerInformation.h

library_includedir=$(includedir)/warped
library_include_HEADERS = $(WARPED_H_FILES) \
	$(top_builddir)/src/warped/WarpedConfig.h

libwarped_la_SOURCES = \
	$(WARPED_H_FILES) \
	$(ECLMPL_SRC) \
	warped/AdaptiveOutputManager.cpp \
	warped/AdaptiveStateManagerBase.cpp \
	warped/AggressiveOutputManager.cpp \
	warped/CentralizedEventSetSchedulingManager.cpp \
	warped/ChebyFossilCollManager.cpp \
	warped/CirculateInitializationMessage.cpp \
	warped/CommunicationManager.cpp \
	warped/CommunicationManagerFactory.cpp \
	warped/CommunicationManagerImplementationBase.cpp \
	warped/Configurable.cpp \
	warped/Configurer.cpp \
	warped/ControlManager.cpp \
	warped/CostAdaptiveStateManager.cpp \
	warped/DefaultCommunicationManager.cpp \
	warped/DefaultEvent.cpp \
	warped/DefaultPartitioner.cpp \
	warped/DefaultPhysicalCommunicationLayer.cpp \
	warped/DefaultSchedulingManager.cpp \
	warped/DefaultTimeWarpEventContainer.cpp \
	warped/DefaultTimeWarpEventContOneAntiMsg.cpp \
	warped/DefaultTimeWarpEventSet.cpp \
	warped/DeserializerManager.cpp \
	warped/DistributedDVFSManager.cpp \
	warped/DVFSManagerFactory.cpp \
	warped/DVFSManagerImplementationBase.cpp \
	warped/Event.cpp \
	warped/EventMessage.cpp \
	warped/EventMessageBase.cpp \
	warped/EventSetFactory.cpp \
	warped/FileManager.cpp \
	warped/FileQueue.cpp \
	warped/FlatState.cpp \
	warped/GVTManagerFactory.cpp \
	warped/GVTManagerImplementationBase.cpp \
	warped/GVTUpdateMessage.cpp \
	warped/InFileQueue.cpp \
	warped/InitializationMessage.cpp \
	warped/IntVTime.cpp \
	warped/KernelMessage.cpp \
	warped/LazyOutputManager.cpp \
	warped/MatternGVTManager.cpp \
	warped/MatternGVTMessage.cpp \
	warped/MessageManager.cpp \
	warped/MsgAggregatingCommunicationManager.cpp \
	warped/NegativeEvent.cpp \
	warped/NegativeEventMessage.cpp \
	warped/OptFossilCollManager.cpp \
	warped/OptFossilCollManagerFactory.cpp \
	warped/OutputEvents.cpp \
	warped/OutputManagerFactory.cpp \
	warped/OutputManagerImplementationBase.cpp \
	warped/Partitioner.cpp \
	warped/PartitionInfo.cpp \
	warped/PeriodicStateManager.cpp \
	warped/RestoreCkptMessage.cpp \
	warped/RoundRobinPartitioner.cpp \
	warped/SchedulingManagerFactory.cpp \
	warped/SequentialConfigurationManager.cpp \
	warped/SequentialFileManager.cpp \
	warped/SequentialSimulationManager.cpp \
	warped/SequentialSimulationStream.cpp \
	warped/SerializedInstance.cpp \
	warped/SharedDVFSManager.cpp \
	warped/Simulation.cpp \
	warped/SimulationConfiguration.cpp \
	warped/SimulationManager.cpp \
	warped/SimulationManagerImplementationBase.cpp \
	warped/SimulationObject.cpp \
	warped/SimulationObjectProxy.cpp \
	warped/SimulationStream.cpp \
	warped/SingleLinkedList.cpp \
	warped/SinkObject.cpp \
	warped/SourceObject.cpp \
	warped/Spinner.cpp \
	warped/SplayTree.cpp \
	warped/StartMessage.cpp \
	warped/State.cpp \
	warped/StateManagerFactory.cpp \
	warped/StateManagerImplementationBase.cpp \
	warped/TerminateToken.cpp \
	warped/ThreadedCostAdaptiveStateManager.cpp \
	warped/ThreadedDynamicOutputManager.cpp \
	warped/ThreadedLazyOutputManager.cpp \
	warped/ThreadedMatternGVTManager.cpp \
	warped/ThreadedOutputEvents.cpp \
	warped/TimeWarpCentralizedEventSetFactory.cpp \
	warped/TimeWarpConfigurationManager.cpp \
	warped/TimeWarpEventSet.cpp \
	warped/TimeWarpEventSetFactory.cpp \
	warped/TimeWarpMultiSet.cpp \
	warped/TimeWarpMultiSetOneAntiMsg.cpp \
	warped/TimeWarpMultiSetSchedulingManager.cpp \
	warped/TimeWarpSenderQueue.cpp \
	warped/TimeWarpSimulationManager.cpp \
	warped/TimeWarpSimulationManagerFactory.cpp \
	warped/TimeWarpSimulationStream.cpp \
	warped/TokenPassingTerminationManager.cpp \
	warped/Transceiver.cpp \
	warped/UsefulWorkMessage.cpp \
	warped/VTime.cpp \
	warped/warped.cpp \
	warped/WarpedDebug.cpp \
	warped/WarpedMain.cpp \
    warped/StragglerEvent.cpp \
    warped/ThreadedAggressiveOutputManager.cpp \
    warped/ThreadedChebyFossilCollManager.cpp \
    warped/ThreadedOptFossilCollManager.cpp \
    warped/ThreadedOutputManagerImplementationBase.cpp \
    warped/ThreadedPeriodicStateManager.cpp \
    warped/ThreadedStateManagerImplementationBase.cpp \
    warped/ThreadedTimeWarpEventSet.cpp \
    warped/ThreadedTimeWarpLoadBalancer.cpp \
    warped/ThreadedTimeWarpMultiSet.cpp \
    warped/ThreadedTimeWarpMultiSetLTSF.cpp \
    warped/ThreadedTimeWarpMultiSetSchedulingManager.cpp \
    warped/ThreadedTimeWarpSimulationManager.cpp

CLEANFILES=$(BUILT_SOURCES)

